✨ Add: player's avatars for Gears And Settings Modal [#123]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -36,6 +36,7 @@
 	},
 	"teams": {
 		"gearsAndGameSettingsOfThisPlayer": "This player's gears and game settings",
+		"sAvatar": "'s Avatar",
 		"sGearsAndGameSettings": "'s Gears & Game Settings",
 		"gearsAndSettingsItem": {
 			"type": "Type",
