--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -36,6 +36,7 @@
 	},
 	"teams": {
 		"gearsAndGameSettingsOfThisPlayer": "この選手の使用デバイスとゲーム設定",
+		"sAvatar": " のアバター",
 		"sGearsAndGameSettings": " の使用デバイス&ゲーム設定",
 		"gearsAndSettingsItem": {
 			"type": "タイプ",
