🌐💩 L10n: translate some items of Gears And Settings Tables [#123]
正確な翻訳を発見することができなかったため、GPT-4o を使用して翻訳しました。
いくつかの翻訳は正確ではないかもしれません。

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -41,7 +41,7 @@
 		"gearsAndSettingsItem": {
 			"type": "Type",
 			"type.default": "DEFAULT",
-			"type.circle": "",
+			"type.circle": "CIRCLE",
 			"type.crosshairs": "CROSSHAIRS",
 			"type.circleAndCrosshairs": "CIRCLE AND CROSSHAIRS",
 			"type.dot": "DOT",
