--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -40,24 +40,24 @@
 		"sGearsAndGameSettings": " 의 사용 장치 및 게임 설정",
 		"gearsAndSettingsItem": {
 			"type": "종류",
-			"type.default": "",
+			"type.default": "기본",
 			"type.circle": "원",
-			"type.crosshairs": "",
-			"type.circleAndCrosshairs": "",
+			"type.crosshairs": "십자선",
+			"type.circleAndCrosshairs": "원과 십자선",
 			"type.dot": "점",
-			"type.line": "",
-			"type.box": "",
-			"type.falloff": "",
-			"type.triwing": "",
-			"type.square": "",
+			"type.line": "라인",
+			"type.box": "박스",
+			"type.falloff": "감쇠",
+			"type.triwing": "트라이윙",
+			"type.square": "사각형",
 			"showsAccuracy": "정확도 표시",
 			"color": "색상",
-			"color.black": "",
-			"color.white": "",
-			"color.red": "",
-			"color.cyan": "",
-			"color.magenta": "",
-			"color.orange": "",
+			"color.black": "검정",
+			"color.white": "흰색",
+			"color.red": "빨강",
+			"color.cyan": "시안",
+			"color.magenta": "마젠타",
+			"color.orange": "주황색",
 			"thickness": "굵기",
 			"rotation": "회전",
 			"crosshairLength": "십자선 길이",
@@ -72,11 +72,11 @@
 			"dot": {
 				"type": "점 유형",
 				"type.default": "기본",
-				"type.ring": "",
-				"type.square": "",
-				"type.triangle": "",
-				"type.cross": "",
-				"type.heart": "",
+				"type.ring": "링",
+				"type.square": "사각형",
+				"type.triangle": "삼각형",
+				"type.cross": "크로스",
+				"type.heart": "하트",
 				"size": "점 크기",
 				"opacity": "점 불투명도"
 			},
