--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -92,5 +92,8 @@
 		"coaches": "コーチ一覧",
 		"form": "応募フォームはこちら"
 	},
-	"error.404": "お探しのページは見つかりませんでした。"
+	"error": {
+		"404": "お探しのページは見つかりませんでした。",
+		"unknown": "予期せぬ問題が発生しました。"
+	}
 }
