--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -92,5 +92,8 @@
 		"coaches": "코치 목록",
 		"form": "참여 신청 양식은 여기"
 	},
-	"error.404": "찾고 계신 페이지를 찾을 수 없습니다."
+	"error": {
+		"404": "찾고 계신 페이지를 찾을 수 없습니다.",
+		"unknown": "예상치 못한 오류가 발생했습니다."
+	}
 }
