♿ A11y: add `aria-label` to news list arrows [#146]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -14,7 +14,9 @@
 		"mousepad": "Mousepad",
 		"keyboard": "Keyboard",
 		"on": "ON",
-		"off": "OFF"
+		"off": "OFF",
+		"prev": "Previous",
+		"next": "Next"
 	},
 	"header.back": "Back to top page",
 	"top": {
