--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -14,7 +14,9 @@
 		"mousepad": "マウスパッド",
 		"keyboard": "キーボード",
 		"on": "ON",
-		"off": "OFF"
+		"off": "OFF",
+		"prev": "前へ",
+		"next": "次へ"
 	},
 	"header.back": "トップページへ戻る",
 	"top": {
