--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -14,7 +14,9 @@
 		"mousepad": "마우스 패드",
 		"keyboard": "키보드",
 		"on": "활성화",
-		"off": "비활성화"
+		"off": "비활성화",
+		"prev": "이전",
+		"next": "다음"
 	},
 	"header.back": "톱 페이지로 돌아가기",
 	"top": {
