♿ A11y: add `aria-label` to news list indicators [#146]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -16,7 +16,8 @@
 		"on": "ON",
 		"off": "OFF",
 		"prev": "Previous",
-		"next": "Next"
+		"next": "Next",
+		"pageN": ["Page ", " "]
 	},
 	"header.back": "Back to top page",
 	"top": {
