--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -16,7 +16,8 @@
 		"on": "활성화",
 		"off": "비활성화",
 		"prev": "이전",
-		"next": "다음"
+		"next": "다음",
+		"pageN": [" ", "페이지"]
 	},
 	"header.back": "톱 페이지로 돌아가기",
 	"top": {
