♿ A11y: alternative text for sponsor logo images are now more descriptive

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -17,7 +17,8 @@
 		"off": "OFF",
 		"prev": "Previous",
 		"next": "Next",
-		"pageN": ["Page ", " "]
+		"pageN": ["Page ", " "],
+		"logoOf": "Logo of {name}"
 	},
 	"header.back": "Back to top page",
 	"top": {
