--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -17,7 +17,8 @@
 		"off": "OFF",
 		"prev": "前へ",
 		"next": "次へ",
-		"pageN": [" ", "ページ"]
+		"pageN": [" ", "ページ"],
+		"logoOf": "{name} のロゴ"
 	},
 	"header.back": "トップページへ戻る",
 	"top": {
