--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -17,7 +17,8 @@
 		"off": "비활성화",
 		"prev": "이전",
 		"next": "다음",
-		"pageN": [" ", "페이지"]
+		"pageN": [" ", "페이지"],
+		"logoOf": "{name} 의 로고"
 	},
 	"header.back": "톱 페이지로 돌아가기",
 	"top": {
