🛠️ Change: update test article for components

--- a/articles/20240301_test.md
+++ b/articles/20240301_test.md
@@ -54,7 +54,7 @@ title: ニュース記事専用のコンポーネント一覧
 	}
 ]} />
 
-membersプロパティで受け取れる型は次の通り:
+`members` プロパティで受け取れる型は次の通り:
 
 ```
 {
@@ -68,3 +68,5 @@ membersプロパティで受け取れる型は次の通り:
     additional?: string;
 }[]
 ```
+
+原則、`members` プロパティの値は `<script>` タグ内で定数として定義することを推奨します。
