✨ Add: GOODS section [#164]

--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -99,6 +99,11 @@
 		"coaches": "コーチ一覧",
 		"form": "応募フォームはこちら"
 	},
+	"goods": {
+		"desc": "チームロゴとメンバーのアクリルキーホルダーが登場しました。ぜひ好みのアイテムを選んでいただき、REVATI の応援をよろしくお願いします。今後も新たなアイテムを追加予定ですので、続報をお待ちください。",
+		"storeLink": "詳細・購入はこちら",
+		"storeLinkTitle": "REVATI ( revati_jp )のオリジナルグッズ・アイテム通販 ∞ SUZURI（スズリ）"
+	},
 	"error": {
 		"404": "お探しのページは見つかりませんでした。",
 		"unknown": "予期せぬ問題が発生しました。"
