🛠️ Change: remove last phrase in description for GOODS section [#164]

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -100,7 +100,7 @@
 		"form": "Participation form here"
 	},
 	"goods": {
-		"desc": "Our team's acrylic keychains featuring our logo and members are now available! We'd love for you to choose your favorite items and continue supporting REVATI. We're planning to add more amazing items in the future, so stay tuned for updates!",
+		"desc": "Our team's acrylic keychains featuring our logo and members are now available! We'd love for you to choose your favorite items and continue supporting REVATI.",
 		"storeLink": "Learn more & Buy here",
 		"storeLinkTitle": "REVATI ( revati_jp ) | Online shopping for original items ∞ SUZURI"
 	},
