--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -100,7 +100,7 @@
 		"form": "応募フォームはこちら"
 	},
 	"goods": {
-		"desc": "チームロゴとメンバーのアクリルキーホルダーが登場しました。ぜひ好みのアイテムを選んでいただき、REVATI の応援をよろしくお願いします。今後も新たなアイテムを追加予定ですので、続報をお待ちください。",
+		"desc": "チームロゴとメンバーのアクリルキーホルダーが登場しました。ぜひ好みのアイテムを選んでいただき、REVATI の応援をよろしくお願いします。",
 		"storeLink": "詳細・購入はこちら",
 		"storeLinkTitle": "REVATI ( revati_jp )のオリジナルグッズ・アイテム通販 ∞ SUZURI（スズリ）"
 	},
