--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -104,6 +104,67 @@
 		"storeLink": "詳細・購入はこちら",
 		"storeLinkTitle": "REVATI ( revati_jp )のオリジナルグッズ・アイテム通販 ∞ SUZURI（スズリ）"
 	},
+	"privacy": {
+		"privacyPolicy": "プライバシーポリシー",
+		"effectiveDate": "発行日",
+		"policy": {
+			"desc": [
+				"REVATI（以下、「弊チーム」）及び",
+				"（以下、「本サイト」）では、 利用者の個人情報を適切に保護し、以下の方針に基づいて管理します。"
+			],
+			"1": [
+				"個人情報の収集について",
+				"弊チームでは、以下の情報を必要に応じて収集することがあります。",
+				"氏名",
+				"メールアドレス",
+				"電話番号",
+				"また、本サイトでは 訪問者のアクセス状況を把握するために、Cloudflare 社の提供する",
+				"を利用しています。Cloudflare Web Analytics は、Cookie や localStorage などクライアントサイドの状態を一切使わずに、利用に関するメトリクスを収集します。また、分析を表示する目的で、IP アドレス、ユーザーエージェント文字列、その他のデータを介して、個人の「フィンガープリント」を取得することもありません。この分析は非侵襲的で、訪問者のプライバシーを尊重します。"
+			],
+			"2": [
+				"個人情報の利用目的",
+				"収集した個人情報は、以下の目的で使用します。",
+				"サービスの提供および運営",
+				"お問い合わせへの対応",
+				"サイト利用状況の分析やサービス向上のため",
+				"法令遵守のため"
+			],
+			"3": [
+				"個人情報の第三者提供について",
+				"弊チーム及び本サイトは、利用者の同意を得ずに個人情報を第三者に提供することはありません。ただし、以下の場合を除きます。",
+				"法令に基づく場合",
+				"利用者の同意がある場合",
+				"業務委託先に提供する場合（例：配送業者など）"
+			],
+			"4": [
+				"個人情報の管理について",
+				"弊チームは、個人情報を保護するために以下の対策を講じています。",
+				"アクセス制限によるデータ管理",
+				"定期的なセキュリティ監査",
+				"また、本サイトは 個人情報を保護するために SSL（Secure Sockets Layer）を使用した通信の暗号化を行っています。"
+			],
+			"5": [
+				"ユーザーの権利",
+				"利用者は、以下の権利を有します。",
+				"自身の個人情報の確認、修正、削除の請求",
+				"個人情報の利用停止の要求",
+				"これらの権利を行使する場合は、下記「8. お問い合わせ先」のメールアドレスにご連絡ください。"
+			],
+			"6": [
+				"Cookieの使用について",
+				"本サイトでは、現在 Cookie を使用していません。Cookieを使用する場合には、その目的および詳細を本プライバシーポリシーに記載し、適切に同意を取得します。"
+			],
+			"7": [
+				"プライバシーポリシーの変更について",
+				"弊チームは、必要に応じて本プライバシーポリシーを変更する場合があります。変更後のポリシーは、本サイト上で公表した時点から適用されます。"
+			],
+			"8": [
+				"お問い合わせ先",
+				"プライバシーポリシーに関するお問い合わせは、以下までご連絡ください。",
+				"メールアドレス"
+			]
+		}
+	},
 	"error": {
 		"404": "お探しのページは見つかりませんでした。",
 		"unknown": "予期せぬ問題が発生しました。"
