--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -113,7 +113,7 @@
 				"(Hereinafter called “Our website”) will appropriately protect user's personal information and manage them based on following policy."
 			],
 			"1": [
-				"About collecting individual data",
+				"About collecting personal data",
 				"Our team might collect these data if needed.",
 				"Full name",
 				"Mail address",
