✨ Add: solace's comment

--- a/articles/2025/1/20250109.md
+++ b/articles/2025/1/20250109.md
@@ -98,7 +98,7 @@ BAMBIE「爆発したナメブラも背負って頑張ります。」
 
 SECHAN「苦労して得た機会なので最善を尽くします！」
 
-solace「」
+solace「新年もっと上手くなって楽しくOWやりたいです」
 
 HESTY「フレサポ久々だけどがんばります」
 
