--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -18,7 +18,10 @@
 		"prev": "前へ",
 		"next": "次へ",
 		"pageN": [" ", "ページ"],
-		"logoOf": "{name} のロゴ"
+		"logoOf": "{name} のロゴ",
+		"gmoPepaboInc": "GMOペパボ株式会社",
+		"establishedOn": "{date} 制定",
+		"revisedOn": "{date} 改訂"
 	},
 	"header": {
 		"skip": "コンテンツへ進む",
@@ -106,7 +109,6 @@
 	},
 	"privacy": {
 		"privacyPolicy": "プライバシーポリシー",
-		"effectiveDate": "発行日",
 		"policy": {
 			"desc": [
 				"REVATI（以下、「弊チーム」）及び",
@@ -152,7 +154,12 @@
 			],
 			"6": [
 				"Cookieの使用について",
-				"本サイトでは、現在 Cookie を使用していません。Cookieを使用する場合には、その目的および詳細を本プライバシーポリシーに記載し、適切に同意を取得します。"
+				"本サイトでは、現在 Cookie を使用していません。Cookieを使用する場合には、その目的および詳細を本プライバシーポリシーに記載し、適切に同意を取得します。",
+				"ただし、外部サービスである",
+				"（",
+				"）の埋め込みコンテンツを含むページがあります。これにより、SUZURI が訪問者のアクセス情報を収集する可能性があります。詳細については、SUZURI の「",
+				"サイトで取得する情報の取扱い",
+				"」ページをご参照ください。"
 			],
 			"7": [
 				"プライバシーポリシーの変更について",
