--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -18,7 +18,10 @@
 		"prev": "이전",
 		"next": "다음",
 		"pageN": [" ", "페이지"],
-		"logoOf": "{name} 의 로고"
+		"logoOf": "{name} 의 로고",
+		"gmoPepaboInc": "GMO Pepabo, Inc.",
+		"establishedOn": "{date} 제정",
+		"revisedOn": "{date} 개정"
 	},
 	"header": {
 		"skip": "콘텐츠로 건너뛰기",
@@ -106,7 +109,6 @@
 	},
 	"privacy": {
 		"privacyPolicy": "Privacy Policy",
-		"effectiveDate": "Effective Date",
 		"policy": {
 			"desc": [
 				"REVATI (Hereinafter called “Our team”) and",
@@ -152,7 +154,12 @@
 			],
 			"6": [
 				"About the use of Cookie",
-				"Our website is currently not using Cookie. When using Cookie, we will state the purpose and detail on this privacy policy and properly acquire consent from the users."
+				"Our website is currently not using Cookie. When using Cookie, we will state the purpose and detail on this privacy policy and properly acquire consent from the users.",
+				"However, some pages on our website contain embedded content from",
+				" (",
+				"). As a result, SUZURI may collect access information. For more details, please refer to SUZURI's \"",
+				"Site Policy",
+				"\" page."
 			],
 			"7": [
 				"Change of privacy policy",
