📚 Docs: add privacy notes for use of `iframe` tags in articles

--- a/articles/2023/2/20230206_test.md
+++ b/articles/2023/2/20230206_test.md
@@ -291,6 +291,9 @@ iframeも使える:
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WTkIZDMYiUs?si=jeref_VMM9u7dQnV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
 
+ただし、YouTube の埋め込みはプライバシーの観点から「プライバシー強化モード」(`youtube-nocookie.com`)を有効にしてください。
+その他の埋め込みについては、その都度プライバシーの保護を優先し、必要があればプライバシーポリシー(全言語分)を改定してください。
+
 ---
 
-###### この記事の最終更新: 2024/3/2
+###### この記事の最終更新: 2025/2/14
