--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -150,7 +150,8 @@
 				"利用者は、以下の権利を有します。",
 				"自身の個人情報の確認、修正、削除の請求",
 				"個人情報の利用停止の要求",
-				"これらの権利を行使する場合は、下記「8. お問い合わせ先」のメールアドレスにご連絡ください。"
+				"これらの権利を行使する場合は、下記「",
+				"」のメールアドレスにご連絡ください。"
 			],
 			"6": [
 				"Cookieの使用について",
