🛠️ Update: ToT's X.com link

--- a/articles/2025/2/20250228.md
+++ b/articles/2025/2/20250228.md
@@ -34,7 +34,7 @@ title: Overwatch女子部門に8名の新メンバーが加入
 		{
 			name: 'ToT',
 			socials: {
-				twitter: 'ToT_ow',
+				twitter: 'T0T_ow',
 			}
 		}
 	];
