🛠️ Update: add Menhera's comment

--- a/articles/2025/4/20250422.md
+++ b/articles/2025/4/20250422.md
@@ -138,7 +138,8 @@ Hesty「OW2になってから競技シーンでフレックスサポートは初
 今回こそはいい結果を出せるようにより良いメインサポートになり、チームをしっかり支えられるように頑張ります！
 応援よろしくお願いします！！」
 
-メンヘラ「」
+メンヘラ「REVATIでCOACHとして活動するようになりました
+今シーズン、良い選手たちと良いチームで良い結果を作ってみます！」
 
 saeyeon「目標はただ一つ、勝利。
  その勝利をつかむため、REVATIの成長は私が責任を持って導きます」
