✨ Add: `TwitterEmbed` component to display Twitter embeds

--- a/articles/2024/3/20240301_test.md
+++ b/articles/2024/3/20240301_test.md
@@ -7,15 +7,17 @@ title: ニュース記事専用のコンポーネント一覧
 <script>
     // コンポーネントをインポート
 	import Member from '$lib/components/news/util/Member.svelte';
+	import TwitterEmbed from '$lib/components/news/util/TwitterEmbed.svelte';
 </script>
 
 実装自体は `/src/lib/components/news/util/` 配下にあります。
 
-- [Memberコンポーネント](#member)
+- [Member コンポーネント](#member)
+- [Twitter Embed コンポーネント](#twitter-embed)
 
 ---
 
-## <span id="member">Memberコンポーネント</span>
+## <span id="member">Member コンポーネント</span>
 
 メンバーとそのソーシャルリンクを列挙します。
 
@@ -70,3 +72,27 @@ title: ニュース記事専用のコンポーネント一覧
 ```
 
 原則、`members` プロパティの値は `<script>` タグ内で定数として定義することを推奨します。
+
+---
+
+## <span id="twitter-embed">Twitter Embed コンポーネント</span>
+
+X (Twitter) の埋め込みを表示します。
+
+[publish.twitter.com](https://publish.twitter.com) にて生成したコードをそのまま含ませてください。  
+その際、必ず「set customization options」から「Opt-out of tailoring Twitter」を有効にしてトラッキングを阻止ください。
+できない場合は、プライバシーポリシーの改定が必要になります。
+
+また、表示まで数秒かかる場合があるので、ページの下の方に配置することを推奨します。
+
+<TwitterEmbed>
+	<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">𝗖𝗼𝗺𝗲 𝗯𝗮𝗰𝗸𝘀,𝗡𝗲𝘄 𝗳𝗮𝗰𝗲𝘀<a href="https://twitter.com/hashtag/REVWIN?src=hash&amp;ref_src=twsrc%5Etfw">#REVWIN</a> <a href="https://twitter.com/hashtag/Overwatch?src=hash&amp;ref_src=twsrc%5Etfw">#Overwatch</a> <a href="https://t.co/IhhkRch1sl">pic.twitter.com/IhhkRch1sl</a></p>&mdash; REVATI (@revati_jp) <a href="https://twitter.com/revati_jp/status/1914605105632174357?ref_src=twsrc%5Etfw">April 22, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</TwitterEmbed>
+
+使い方の例:
+
+```
+<TwitterEmbed>
+	<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">𝗖𝗼𝗺𝗲 𝗯𝗮𝗰𝗸𝘀,𝗡𝗲𝘄 𝗳𝗮𝗰𝗲𝘀<a href="https://twitter.com/hashtag/REVWIN?src=hash&amp;ref_src=twsrc%5Etfw">#REVWIN</a> <a href="https://twitter.com/hashtag/Overwatch?src=hash&amp;ref_src=twsrc%5Etfw">#Overwatch</a> <a href="https://t.co/IhhkRch1sl">pic.twitter.com/IhhkRch1sl</a></p>&mdash; REVATI (@revati_jp) <a href="https://twitter.com/revati_jp/status/1914605105632174357?ref_src=twsrc%5Etfw">April 22, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</TwitterEmbed>
+```
