🛠️ Update: revise privacy policy "6. About the use of Cookie" due to introduction X.com embeds
Related comment in GitHub: https://github.com/Sarf-Esports/website/pull/222#issuecomment-2824209875

--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -158,8 +158,11 @@
 				"本サイトでは、現在 Cookie を使用していません。Cookieを使用する場合には、その目的および詳細を本プライバシーポリシーに記載し、適切に同意を取得します。",
 				"ただし、外部サービスである",
 				"（",
-				"）の埋め込みコンテンツを含むページがあります。これにより、SUZURI が訪問者のアクセス情報を収集する可能性があります。詳細については、SUZURI の「",
+				"）や",
+				"（",
+				"）の埋め込みコンテンツを含むページがあります。これにより、当該ページにて各サービスが訪問者のアクセス情報を収集する可能性があります。詳細については、SUZURI の「",
 				"サイトで取得する情報の取扱い",
+				"」や Twitter Developer Platform の「",
 				"」ページをご参照ください。"
 			],
 			"7": [
