--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -156,10 +156,13 @@
 			"6": [
 				"About the use of Cookie",
 				"Our website is currently not using Cookie. When using Cookie, we will state the purpose and detail on this privacy policy and properly acquire consent from the users.",
-				"However, some pages on our website contain embedded content from",
+				"However, some pages on our website contain embedded content from external services such as",
 				" (",
-				"). As a result, SUZURI may collect access information. For more details, please refer to SUZURI's \"",
+				") and",
+				" (",
+				"). As a result, these services may collect access information. For more details, please refer to SUZURI's \"",
 				"Site Policy",
+				"\" and Twitter Developer Platform's \"",
 				"\" page."
 			],
 			"7": [
