📚 Docs: change Twitter Embed component privacy rules

--- a/articles/2024/3/20240301_test.md
+++ b/articles/2024/3/20240301_test.md
@@ -79,9 +79,8 @@ title: ニュース記事専用のコンポーネント一覧
 
 X (Twitter) の埋め込みを表示します。
 
-[publish.twitter.com](https://publish.twitter.com) にて生成したコードをそのまま含ませてください。  
-その際、必ず「set customization options」から「Opt-out of tailoring Twitter」を有効にしてトラッキングを阻止ください。
-できない場合は、プライバシーポリシーの改定が必要になります。
+[publish.twitter.com](https://publish.twitter.com) にて生成したコードをそのまま含ませてください。
+その際、原則「set customization options」から「Opt-out of tailoring Twitter」を有効にしてトラッキングを阻止してください。
 
 また、表示まで数秒かかる場合があるので、ページの下の方に配置することを推奨します。
 
