✨ Add: Another's birthday and Twitch link

--- a/articles/2025/4/20250427.md
+++ b/articles/2025/4/20250427.md
@@ -21,7 +21,10 @@ title: Overwatch Academy部門設立のお知らせ
 		},
 		{
 			name: 'Another',
-			socials: { twitter: 'Another3354' }
+			socials: {
+				twitter: 'Another3354',
+				twitch: 'another_1025'
+			}
 		},
 		{
 			name: 'tino',
