✨ Add: Another's comment

--- a/articles/2025/4/20250427.md
+++ b/articles/2025/4/20250427.md
@@ -85,7 +85,7 @@ YEN「精一杯頑張ります。」
 
 <!-- tino「」 -->
 
-<!-- Another「」 -->
+Another「owで競技シーンをやるのは初めてなのでこれから頑張っていきたいと思います！」
 
 lud「ブリメインです！精一杯頑張ります！」
 
