✨ Add: MOL's birthday, Twitch link and tino's birthday

--- a/articles/2025/4/20250427.md
+++ b/articles/2025/4/20250427.md
@@ -10,7 +10,10 @@ title: Overwatch Academy部門設立のお知らせ
 	const TANKS = [
 		{
 			name: 'MOL',
-			socials: { twitter: 'moruka0824' }
+			socials: {
+				twitter: 'moruka0824',
+				twitch: 'mol_ow'
+			}
 		}
 	];
 
