--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -121,7 +121,7 @@
 				"Mail address",
 				"Phone number",
 				"In addition, to comprehend user's access status, our website uses",
-				"Cloudflare Web Analytics will collect metrics about usage status without using client-side circumstances such as Cookie or localStorage. Besides, we might acquire individual ”fingerprints” through IP address, user-agent, and other data in order to show analysis. This analysis is harmless and respect user's privacy."
+				". Cloudflare Web Analytics will collect metrics about usage status without using client-side circumstances such as Cookie or localStorage. Besides, we also don’t acquire individual ”fingerprints” through IP address, user-agent, and other data in order to show analysis. This analysis is harmless and respect user's privacy."
 			],
 			"2": [
 				"Purpose of using personal information",
