🛠️ Change: alter article content

--- a/articles/2025/5/20250511.md
+++ b/articles/2025/5/20250511.md
@@ -26,7 +26,7 @@ title: Overwatch部門 ロスター変更のお知らせ
 	];
 </script>
 
-このたび、Hofacが隼ゲーミングへ移籍することとなりました。
+このたび、Hofacが隼ゲーミング様へ移籍することとなりました。
 これまでOverwatch部門の一員として尽力してくれたHofac選手に、心より感謝するとともに、新天地でのさらなる活躍を期待しています。
 
 また、Hofacの移籍に伴い、Overwatch部門には新たに2名の選手が加入いたします。
