📝 Change: revise privacy policy

--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -111,8 +111,9 @@
 		"privacyPolicy": "Privacy Policy",
 		"policy": {
 			"desc": [
-				"REVATI (Hereinafter called “Our team”) and",
-				"(Hereinafter called “Our website”) will appropriately protect user's personal information and manage them based on following policy."
+				"REVATI and its affiliated organization REVATI Studio (hereinafter collectively, “Our team”), as well as the websites that are operated by our team including ",
+				" and ",
+				" (hereinafter collectively, “Our website”), will appropriately protect users' personal information and manage it based on the following policy."
 			],
 			"1": [
 				"About collecting personal data",
