--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -21,7 +21,7 @@
 		"logoOf": "{name} のロゴ",
 		"gmoPepaboInc": "GMOペパボ株式会社",
 		"establishedOn": "{date} 制定",
-		"revisedOn": "{date} 改訂"
+		"revisedOn": "{date} 改定"
 	},
 	"header": {
 		"skip": "コンテンツへ進む",
