📝 Update: update team name reading

--- a/articles/2023/1/20230121.md
+++ b/articles/2023/1/20230121.md
@@ -4,9 +4,8 @@ indexed: true
 title: Sarf Esports リブランディングのお知らせ
 ---
 
-Sarf Esports は2023年1月21日よりチーム名を **REVATI**(レーヴァティ) へと改めます。
+Sarf Esports は、2023年1月21日よりチーム名を **REVATI**（レバティ）へと改めます。
 
-新しいイメージや戦略に合わせて さらなるチームの発展と活動範囲の拡大を目指し、
+新しいイメージや戦略に合わせて、さらなるチームの発展と活動範囲の拡大を目指し、
 成功を収めるために努力して参ります。
 応援よろしくお願いします。
-
