🔥 Update: うちのごはん leaves

--- a/articles/2025/9/20250919.md
+++ b/articles/2025/9/20250919.md
@@ -9,7 +9,8 @@ title: うちのごはん、かばお脱退のお知らせ
 
 	const MEMBERS = [
     {
-      name: 'うちのごはん'
+      name: 'うちのごはん',
+      socials: { twitter: 'rqa_j', twitch: 'rqa_ow' }
     },
     {
       name: 'かばお',
