--- a/src/lib/scripts/i18n/locales/ko.json
+++ b/src/lib/scripts/i18n/locales/ko.json
@@ -92,6 +92,14 @@
 			"scaleWithResolution": "해상도에 비례"
 		}
 	},
+	"creative": {
+		"desc": [
+			"크리에이티브 스튜디오 '",
+			"'를 소개합니다 🚀",
+			"영상과 음악 제작부터 디자인, 번역, 웹 개발 등에 이르기까지, 여러분이 상상하는 모든 크리에이티브를 원스톱으로 실현해 드립니다. 많은 의뢰 부탁드립니다."
+		],
+		"websiteLink": "공식 웹사이트 바로가기"
+	},
 	"coaching": {
 		"desc": [
 			"이 프로젝트는 Nyam Gaming & REVATI 의 Overwatch2 코칭 프로젝트입니다.",
