✨ Feat: add Licenses page

--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -179,5 +179,6 @@
 	"error": {
 		"404": "お探しのページは見つかりませんでした。",
 		"unknown": "予期せぬ問題が発生しました。"
-	}
+	},
+	"licenses.desc": "本ウェブサイトの開発に使用しているオープンソースソフトウェア並びにその著作権表示及びライセンス条文を以下に示します。"
 }
