--- a/src/lib/scripts/i18n/locales/en.json
+++ b/src/lib/scripts/i18n/locales/en.json
@@ -179,5 +179,6 @@
 	"error": {
 		"404": "The page you are looking for could not be found.",
 		"unknown": "An unexpected error occurred."
-	}
+	},
+	"licenses.desc": "The following lists the open-source software used in the development of this website, along with their respective copyright notices and license texts."
 }
