📝 Chore: change CREATIVE section description [#269]

--- a/src/lib/scripts/i18n/locales/ja.json
+++ b/src/lib/scripts/i18n/locales/ja.json
@@ -94,7 +94,7 @@
 	},
 	"creative": {
 		"desc": [
-			"クリエイティブプロダクション『",
+			"クリエイティブスタジオ『",
 			"』が始動 🚀",
 			"映像や音楽制作、デザイン、翻訳、Web 開発など、あらゆる「つくりたい」をワンストップで実現します。ご依頼お待ちしております。"
 		],
