🛠️ Update: add harutoon's twitch

--- a/articles/2025/12/20251227.md
+++ b/articles/2025/12/20251227.md
@@ -13,7 +13,7 @@ title: Overwatch部門 2026年に向けた新ロスター発表
 	];
 
 	const DPS = [
-		{ name: 'harutoon', socials: { twitter: 'harutoon_ow' } },
+		{ name: 'harutoon', socials: { twitter: 'harutoon_ow', twitch: 'harutoon_' } },
     { name: 'minseo', socials: { twitter: 'Kirito0519_OW' } }
 	];
 
