🛠️ Change: allow studio.revati.jp to receive referrer
`noopener` has been retained for security.

--- a/articles/2025/7/20250724.md
+++ b/articles/2025/7/20250724.md
@@ -17,4 +17,4 @@ title: REVATI Studio 設立のお知らせ
 
 制作依頼やお問い合わせは、REVATI Studioの公式サイトより確認できます。
 
-<a href="https://studio.revati.jp" target="_blank" rel="noopener noreferrer">REVATI Studio 公式サイト</a>
+<a href="https://studio.revati.jp" target="_blank" rel="noopener">REVATI Studio 公式サイト</a>
