--- a/articles/2026/1/20260120.md
+++ b/articles/2026/1/20260120.md
@@ -32,7 +32,7 @@ title: Overwatch部門 新メンバー加入発表
 
 <Member members={ANALYSTS} />
 
-韓国の強豪アカデミー、O2 Blast出身であるimaloneの持つ爆発力、そして99DIVINEやNTMR、Extionctionといった名門を渡り歩いてきたFindirathの経験をもとに、
+韓国の強豪アカデミー、O2 Blast出身であるimaloneの持つ爆発力、そして99DIVINEやNTMR、Extinctionといった名門を渡り歩いてきたFindirathの経験をもとに、
 2月末に始まるOWCS JAPAN 2026 Stage1をチーム一丸で迎え撃ちます。
 
 今後とも、応援よろしくお願いいたします。
