📝 Update: add member comments

--- a/articles/2026/1/20260120.md
+++ b/articles/2026/1/20260120.md
@@ -36,3 +36,14 @@ title: Overwatch部門 新メンバー加入発表
 2月末に始まるOWCS JAPAN 2026 Stage1をチーム一丸で迎え撃ちます。
 
 今後とも、応援よろしくお願いいたします。
+
+---
+
+## コメント
+
+imalone「強くなって戻ってきました！」
+
+Findirath「REVATIと一緒に仕事ができることを本当に嬉しく思っています。
+私は別の地域出身ですが、REVATIという組織のことは以前から知っていました。
+Overwatch Esportsの世界で働き始めて以来、彼らの存在を知っていたのです。
+彼らの未来の一員になれることは、私にとって非常に光栄なことです。」
